--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: Blog.new, local: true) do |form| %>
+<%= form_with(model: @blog, local: true) do |form| %>
 
   <div class="blog_content">
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
   <%= form.submit %>
-  
+
 <% end %>
