--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,2 +1,16 @@
 <h1>つぶやき一覧</h1>
-<%= @blogs %>
+
+<table>
+  <tr>
+    <th>本文</th>
+  </tr>
+
+<%= @blogs.each do |blog| %>
+  <tr>
+    <td><%= blog.content %></td>
+  </tr>
+
+ <% end %>
+</table>
+<br>
+<%= link_to '新しいつぶやきを投稿する', new_blog_path %>
