--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,13 +4,12 @@
   <tr>
     <th>本文</th>
   </tr>
-
-<%= @blogs.each do |blog| %>
-  <tr>
+  <%= @blogs.each do |blog| %>
+    <tr>
     <td><%= blog.content %></td>
-  </tr>
-
- <% end %>
+    <td><%= link_to '編集', blog_path(blog.id) %></td>
+    </tr>
+   <% end %>
 </table>
 <br>
 <%= link_to '新しいつぶやきを投稿する', new_blog_path %>
