--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,13 +1,10 @@
 <h1>つぶやき一覧</h1>
-
 <table>
-  <tr>
-    <th>本文</th>
-  </tr>
   <%= @blogs.each do |blog| %>
     <tr>
     <td><%= blog.content %></td>
-    <td><%= link_to '編集', blog_path(blog.id) %></td>
+    <td><%= link_to '閲覧', blog_path(blog.id) %></td>
+    <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
     </tr>
    <% end %>
 </table>
