--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>つぶやき一覧</h1>
 <table>
-  <%= @blogs.each do |blog| %>
+  <% @blogs.each do |blog| %>
     <tr>
     <td><%= blog.content %></td>
     <td><%= link_to '閲覧', blog_path(blog.id) %></td>
