--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,6 +6,7 @@
   <% @blogs.each do |blog| %>
     <tr>
     <td><%= blog.content %></td>
+    <td><%= blog.created_at %></td>
     <td><%= link_to '閲覧', blog_path(blog.id) %></td>
     <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
     <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '本当に編集していいですか？' } %></td>
