--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -9,7 +9,7 @@
     <td><%= blog.created_at %></td>
     <td><%= link_to '閲覧', blog_path(blog.id) %></td>
     <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
-    <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '本当に編集していいですか？' } %></td>
+    <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
     </tr>
    <% end %>
 </table>
