--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @blog, local: true, url: confirm_blogs_path ) do |form| %>
+<%= form_with(model: @blog, local: true, url: choose_new_or_edit ) do |form| %>
   <% if @blog.errors.any? %>
     <div id="error_explanation">
       <h2><%= @blog.errors.count %>件のエラーがあります。</h2>
@@ -11,13 +11,13 @@
     </div>
   <% end %>
 
-
   <div class="blog_content">
-    <%= form.label :content %>
+    <%= form.label :本文 %>
     <%= form.text_field :content %>
   </div>
-  <%= form.submit %>
-  <br><br>
+  <br>
+  <%= form.submit "登録する" %>
+  <br>
+  <% end %>
+  <br>
   <%= link_to 'つぶやき一覧へ', blogs_path %>
-
-<% end %>
