--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,11 +1,13 @@
 <h3>以下の内容で、送信する。</h3>
 
-<%= form_with(model: @blog, local: true) do |form| %>
+<%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
   <%= form.hidden_field :content %>
-
 
   <p><%= @blog.content %></p>
 
-
   <%= form.submit  "登録する" %>
+  <br>
+  <%= form.submit "戻る", name: 'back' %>
 <% end %>
+<br>
+<%= link_to 'つぶやき一覧へ', blogs_path %>
