--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the blogs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+header{
+  width:100%;
+  background-color: #2c3e50;
+  height: 54px;
+  color:white;
+  font-size:30px;
+  text-align:center;
+}
+
+.content{
+  height: 100px;
+}
