--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h3>以下の内容で、送信する。</h3>
 
 <%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
@@ -10,4 +11,5 @@
   <%= form.submit "戻る", name: 'back' %>
 <% end %>
 <br>
-<%= link_to 'つぶやき一覧へ', blogs_path %>
+<%= link_to 'つぶやき一覧へ', blogs_path, class: 'btn btn-primary'  %>
+</div>
