--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,40 +1,33 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
-        <span class="sr-only">Bootstrap</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Bootstrap
+<div class="container">
+    <div class="col-md-1">広告</div>   
+    
+    
+    <div class="col-md-10">
 
-      </a>
+        <header class="header">つぶやき一覧</header>
+        <p><%= notice %></p>
+   
+      <% @blogs.each do |blog| %>
+        <div class="row">
+          <div class="well">
+            <div class="content">
+              <%= blog.content %>
+              <br><br>
+                <div class="panel-footer">
+                  <%= blog.created_at %>
+                  <br>
+                  <%= link_to '閲覧', blog_path(blog.id), class: 'btn btn-primary' %>
+                  <%= link_to '編集', edit_blog_path(blog.id), class: 'btn btn-primary'  %>
+                  <%= link_to '削除', blog_path(blog.id),class: 'btn btn-primary', method: :delete ,data: { confirm: '本当に削除していいですか？' } %>
+                </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+      <br>
+      <div class=row>
+      <%= link_to '新しいつぶやきを投稿する', new_blog_path, class: 'btn btn-primary'  %>
+      </div>
     </div>
-    <div id="gnavi" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="">top</a></li>
-        <li><a href="">menu1</a></li>
-        <li><a href="">menu2</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<h1>つぶやき一覧</h1>
-
-<p><%= notice %></p>
-
-<table>
-  <% @blogs.each do |blog| %>
-    <tr>
-    <td><%= blog.content %></td>
-    <td><%= blog.created_at %></td>
-    <td><%= link_to '閲覧', blog_path(blog.id) %></td>
-    <td><%= link_to '編集', edit_blog_path(blog.id) %></td>
-    <td><%= link_to '削除', blog_path(blog.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
-    </tr>
-   <% end %>
-</table>
-<br>
-<%= link_to '新しいつぶやきを投稿する', new_blog_path %>
+    <div class="col-md-1">広告</div>
+</div>
