--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,4 +1,6 @@
+<div class="container">
 <h1>つぶやき詳細画面</h1>
 <p>本文: <%= @blog.content %></p>
 <br>
-<%= link_to 'つぶやき一覧へ', blogs_path %>
+<%= link_to 'つぶやき一覧へ', blogs_path, class: 'btn btn-primary'  %>
+</div>
