--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -12,5 +12,21 @@ header{
 }
 
 .content{
-  height: 100px;
+  height: 120px;
+}
+
+h1{
+  font-size:16px;
+}
+
+p{
+  font-size:16px;
+}
+
+.input{
+  border:0;
+  padding:10px;
+  border:solid 1px #ccc;
+  width:500px;
+  height:50px;
 }
