--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -5,22 +5,64 @@
 header{
   width:100%;
   background-color: #2c3e50;
-  height: 54px;
+  height: 50px;
   color:white;
   font-size:30px;
   text-align:center;
 }
 
-.content{
-  height: 120px;
+footer{
+  position: relative;
+  width:100%;
+  height: 50px;
+  background-color: #2c3e50;
+  color:white;
 }
 
-h1{
+img {
+  position:absolute;
+  max-width: 100%;
+  height: auto;
+  top:50px;
+}
+
+.company{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform : translate(-50%,-50%);
   font-size:16px;
+}
+
+.content{
+  height: 180px;
+  width: 700px;
+  margin: 0 auto;
+}
+
+.top-bottom{
+  height: 50px;
+  width: 700px;
+  margin: 0 auto;
+}
+
+.panel-body{
+  position: relative;
+  height: 100px
+}
+
+.bottom-text{
+  position: absolute;
+  bottom:10px;
+}
+
+.panel-footer{
+  height: 50px
 }
 
 p{
   font-size:16px;
+  font-weight: bold; 
 }
 
 .input{
