--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,32 +1,38 @@
 <div class="container">
-    <div class="col-md-1">広告</div>   
+    <div class="col-sm-2"><%= image_tag 'mori.jpg' %></div>   
     
-    <div class="col-md-10">
+    <div class="col-sm-8">
 
-        <header class="header">つぶやき一覧</header>
-        <p><%= notice %></p>
-   
-      <% @blogs.each do |blog| %>
-        <div class="row">
-          <div class="well">
-            <div class="content">
-              <%= blog.content%>
-              <br><br>
-                <div class="panel-footer">
-                  <%= blog.created_at %>
-                  <br>
-                  <%= link_to '閲覧', blog_path(blog.id), class: 'btn btn-primary' %>
-                  <%= link_to '編集', edit_blog_path(blog.id), class: 'btn btn-primary'  %>
-                  <%= link_to '削除', blog_path(blog.id),class: 'btn btn-primary', method: :delete ,data: { confirm: '本当に削除していいですか？' } %>
-                </div>
+      <header>つぶやき一覧</header>
+      <br>
+      <p><%= notice %></p>
+
+      <div class=row>
+        <div class="top-bottom">
+          <%= link_to '新しいつぶやきを投稿する', new_blog_path, class: 'btn btn-primary'  %>
+        </div>
+      </div>
+
+      <div class="row">
+      <% @blogs.reverse_each do |blog| %>
+          <div class="content">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <p><%= blog.content%></p>
+                <div class="bottom-text"><%= blog.created_at %></div>
+              </div>
+              <div class="panel-footer">
+                <%= link_to '閲覧', blog_path(blog.id), class: 'btn btn-primary' %>
+                <%= link_to '編集', edit_blog_path(blog.id), class: 'btn btn-primary'  %>
+                <%= link_to '削除', blog_path(blog.id),class: 'btn btn-primary', method: :delete ,data: { confirm: '本当に削除していいですか？' } %>
+              </div>
             </div>
           </div>
-        </div>
       <% end %>
-      <br>
-      <div class=row>
-      <%= link_to '新しいつぶやきを投稿する', new_blog_path, class: 'btn btn-primary'  %>
       </div>
+      <footer>
+        <div class="company">© Tubuyaki Corp. All RIGHTS RESERVED.</div>
+      </fotter>
     </div>
-    <div class="col-md-1">広告</div>
+    <div class="col-sm-2"><%= image_tag 'making_150202_03.jpg' %></div>
 </div>
