--- a/app/views/tweets/confirm.html.erb
+++ b/app/views/tweets/confirm.html.erb
@@ -7,11 +7,11 @@
     <p>以下の内容で、送信する。</p>
     <div class="row">
       <div class="content">
-        <%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
+        <%= form_with(model: @tweet, url: tweets_path, local: true) do |form| %>
           <div class="panel panel-default">
             <div class="panel-body">
               <%= form.hidden_field :content %>
-              <%= @blog.content %>
+              <%= @tweet.content %>
             </div>
             <div class="panel-footer">
               <%= form.submit  "登録する", class: 'btn btn-primary' %>
@@ -24,7 +24,7 @@
 
     <div class=row>
       <div class="top-bottom">    
-        <%= link_to 'つぶやき一覧へ', blogs_path, class: 'btn btn-primary'  %>
+        <%= link_to 'つぶやき一覧へ', tweets_path, class: 'btn btn-primary'  %>
       </div>
     </div>
     <footer>
