--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -9,22 +9,22 @@
 
       <div class=row>
         <div class="top-bottom">
-          <%= link_to '新しいつぶやきを投稿する', new_blog_path, class: 'btn btn-primary'  %>
+          <%= link_to '新しいつぶやきを投稿する', new_tweet_path, class: 'btn btn-primary'  %>
         </div>
       </div>
 
       <div class="row">
-      <% @blogs.reverse_each do |blog| %>
+      <% @tweets.reverse_each do |tweet| %>
           <div class="content">
             <div class="panel panel-default">
               <div class="panel-body">
-                <p><%= blog.content%></p>
-                <div class="bottom-text"><%= blog.created_at %></div>
+                <p><%= tweet.content%></p>
+                <div class="bottom-text"><%= tweet.created_at %></div>
               </div>
               <div class="panel-footer">
-                <%= link_to '閲覧', blog_path(blog.id), class: 'btn btn-primary' %>
-                <%= link_to '編集', edit_blog_path(blog.id), class: 'btn btn-primary'  %>
-                <%= link_to '削除', blog_path(blog.id),class: 'btn btn-primary', method: :delete ,data: { confirm: '本当に削除していいですか？' } %>
+                <%= link_to '閲覧', tweet_path(tweet.id), class: 'btn btn-primary' %>
+                <%= link_to '編集', edit_tweet_path(tweet.id), class: 'btn btn-primary'  %>
+                <%= link_to '削除', tweet_path(tweet.id),class: 'btn btn-primary', method: :delete ,data: { confirm: '本当に削除していいですか？' } %>
               </div>
             </div>
           </div>
