--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -8,11 +8,11 @@
       <div class="content">
         <div class="panel panel-default">
           <div class="panel-body">
-            <p><%= @blog.content %></p>
+            <p><%= @tweet.content %></p>
           </div>
           <div class="panel-footer">
-            <%= link_to '編集', edit_blog_path(@blog.id), class: 'btn btn-primary'  %>
-            <%= link_to '削除', blog_path(@blog.id),class: 'btn btn-primary', method: :delete ,data: { confirm: '本当に削除していいですか？' } %>
+            <%= link_to '編集', edit_tweet_path(@tweet.id), class: 'btn btn-primary'  %>
+            <%= link_to '削除', tweet_path(@tweet.id),class: 'btn btn-primary', method: :delete ,data: { confirm: '本当に削除していいですか？' } %>
           </div>
         </div>
       </div>
@@ -20,7 +20,7 @@
 
     <div class=row>
       <div class="top-bottom">
-        <%= link_to 'つぶやき一覧へ', blogs_path, class: 'btn btn-primary'  %>
+        <%= link_to 'つぶやき一覧へ', tweets_path, class: 'btn btn-primary'  %>
       </div>
     </div>
     <footer>
